# genericsuite-be-ai

./: .env-example  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
genericsuite_ai/chalicelib/endpoints/: ai_chatbot_endpoint.py  ai_conversations_conversion.py
genericsuite_ai/chalicelib/util/: create_app.py
genericsuite_ai/config/: config.py
genericsuite_ai/fastapilib/endpoints/: ai_chatbot_endpoint.py
genericsuite_ai/fastapilib/util/: create_app.py
genericsuite_ai/flasklib/endpoints/: ai_chatbot_endpoint.py
genericsuite_ai/flasklib/util/: create_app.py
genericsuite_ai/lib/: ai_audio_processing.py  ai_chatbot_commons.py  ai_chatbot_endpoint.py  ai_chatbot_main_langchain.py  ai_chatbot_main_langchain_OLD.py  ai_chatbot_main_langchain_ca.py  ai_chatbot_main_openai.py  ai_conversations.py  ai_conversations_conversion.py  ai_embeddings.py  ai_gpt_fn_conversations.py  ai_gpt_functions.py  ai_image_generator.py  ai_langchain_models.py  ai_langchain_models_abstract.py  ai_langchain_tools.py  ai_storage.py  ai_sub_bots.py  ai_utilities.py  ai_vision.py  amazon_bedrock.py  clarifai.py  gcp.py  git_reader.py  huggingface.py  huggingface_chat_model.py  huggingface_endpoint.py  ibm.py  json_reader.py  pdf_reader.py  translator.py  vector_index.py  web_scraping.py  web_search.py  youtube_reader.py
genericsuite_ai/models/billing/: billing_utilities.py
