[project]
name = "genericsuite_ai"
version = "0.1.10"
authors = [
    { name="Carlos J. Ramirez", email="tomkat_cr@yahoo.com" }
]
description = "The GenericSuite AI for Python (backend version)"
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    "License :: OSI Approved :: ISC License",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Operating System :: OS Independent",
    'Topic :: Software Development',
]
dynamic = [
    "license",
]

[project.urls]
Homepage = "https://genericsuite.carlosjramirez.com/Backend-Development/GenericSuite-AI/"
Issues = "https://github.com/tomkat-cr/genericsuite-be-ai/issues"

[tool.poetry]
name = "genericsuite_ai"
version = "0.1.10"
description = "The GenericSuite AI for Python (backend version)"
authors = ["Carlos J. Ramirez <tomkat_cr@yahoo.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/tomkat-cr/genericsuite-be-ai.git"
homepage = "https://genericsuite.carlosjramirez.com/Backend-Development/GenericSuite-AI/"
packages = [
    { include = "genericsuite_ai" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = "^1.7.2"
langchain = "^0.3.0"
click = "^8.1.7"
jmespath = "^1.0.1"
pyyaml = "^6.0.1"
setuptools = "^75.0.0"
six = "^1.16.0"
typing-extensions = "^4.8.0"
duckduckgo-search = "5.3.1b1"
requests-toolbelt = "^1.0.0"
tiktoken = "^0.7.0"
faiss-cpu = "^1.7.4"
google-api-python-client = "^2.145.0"
langchain-google-genai = {extras = ["images"], version = "^2.0.0"}
pillow = "^10.1.0"
langchain-openai = "^0.2.0"
jq = "^1.6.0"
text-generation = "^0.6.1"
langchain-core = "^0.3.5"
langchain-google-community = "^2.0.0"
langchain-anthropic = "^0.2.1"
langchain-groq = "^0.2.0"
urllib3 = "1.26"
langchain-aws = "^0.2.1"
clarifai = "10.1.0"
transformers = "^4.45.1"

[tool.poetry.group.dev.dependencies]
changelog-cli = "^0.7.1"
mypy = "^0.931"
pylint = "^3.1.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
yapf = "^0.32.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
