[project]
name = "genericsuite_ai"
version = "0.2.0"
authors = [
    { name="Carlos J. Ramirez", email="info@genericsuite.com" }
]
description = "The GenericSuite AI for Python (backend version)"
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Operating System :: OS Independent",
    'Topic :: Software Development',
]
dynamic = [
    "license",
]

[project.urls]
Homepage = "https://genericsuite.carlosjramirez.com/Backend-Development/GenericSuite-AI/"
Issues = "https://github.com/tomkat-cr/genericsuite-be-ai/issues"

[tool.poetry]
name = "genericsuite_ai"
version = "0.2.0"
description = "The GenericSuite AI for Python (backend version)"
authors = ["Carlos J. Ramirez <info@genericsuite.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/tomkat-cr/genericsuite-be-ai.git"
homepage = "https://genericsuite.carlosjramirez.com/Backend-Development/GenericSuite-AI/"
packages = [
    { include = "genericsuite_ai" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
openai = "^1.7.2"
click = "^8.1.7"
jmespath = "^1.0.1"
pyyaml = "^6.0.1"
setuptools = "^78.1.1"
six = "^1.16.0"
typing-extensions = "^4.8.0"
requests-toolbelt = "^1.0.0"
tiktoken = "^0.7.0"
faiss-cpu = "1.12.0"
google-api-python-client = "^2.145.0"
pillow = "^10.1.0"
jq = "^1.6.0"
urllib3 = "^2.5.0"
transformers = "^4.57.1"
ddgs = "^9.0.2"
pypdf = "^6.1.3"
langchain = "^1.0.3"
langchain-google-genai = "^3.0.0"
langchain-openai = "^1.0.1"
langchain-core = "^1.0.2"
langchain-anthropic = "^1.0.1"
langchain-groq = "^1.0.0"
langchain-ollama = "^1.0.0"
langchain-google-vertexai = "^3.0.1"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.0.0"
langchain-aws = "^1.0.0"

[tool.poetry.group.dev.dependencies]
changelog-cli = "^0.7.1"
mypy = "^0.931"
pylint = "^3.1.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
yapf = "^0.32.0"
coverage = "^7.2.7"
build = "^1.3.0"
twine = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
